[gd_scene load_steps=34 format=2]

[ext_resource path="res://Hit_Hurt_Boxes/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Monsters_Script/crab.gd" type="Script" id=2]
[ext_resource path="res://Enemies/crab_monster.png" type="Texture" id=3]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://SoftCollisions.tscn" type="PackedScene" id=7]
[ext_resource path="res://WanderController.tscn" type="PackedScene" id=8]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.gd" type="Script" id=10]
[ext_resource path="res://Spells/FrozenTimer.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 6.0
height = 0.0

[sub_resource type="CircleShape2D" id=31]
radius = 4.0

[sub_resource type="Theme" id=11]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.882353, 0.0980392, 0.0980392, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.658824, 0.701961, 0.439216, 0.478431 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true

[sub_resource type="CircleShape2D" id=32]
radius = 160.072

[node name="crab" type="KinematicBody2D" groups=["MiniMap_Enemies"]]
position = Vector2( 216, 127 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_horizontal_guides_": [  ]
}
MAX_Speed = null
acceleration = null
friction = null
WANDER_TAEGET_RANGE = null
damage = null

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -15 )
scale = Vector2( 0.625, 0.625 )
frames = SubResource( 22 )
animation = "Attack"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="stats" parent="." instance=ExtResource( 5 )]
max_health = 8
max_mana = 0

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 2
script = ExtResource( 10 )

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -15 )

[node name="Timer" type="Timer" parent="HurtBox"]

[node name="HitBox" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -15 )
collision_layer = 64
collision_mask = 4
damage = 1

[node name="SoftCollisions" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollisions" index="0"]
shape = SubResource( 31 )
one_way_collision = true

[node name="WanderController" parent="." instance=ExtResource( 8 )]

[node name="Timer" parent="WanderController" index="0"]
one_shot = true
autostart = true

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -11.0
margin_top = -29.0
margin_right = 11.0
margin_bottom = -26.0
theme = SubResource( 11 )
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
max_value = 8.0
value = 8.0
percent_visible = false

[node name="PlayerDet" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -15 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDet"]
shape = SubResource( 32 )

[node name="FrozenTimer" parent="." instance=ExtResource( 11 )]

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]
[connection signal="timeout" from="HurtBox/Timer" to="HurtBox" method="_on_Timer_timeout"]
[connection signal="timeout" from="FrozenTimer" to="." method="_on_FrozenTimer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
[editable path="SoftCollisions"]
[editable path="WanderController"]
[editable path="PlayerDet"]
